# brainlike

./: .gitignore  brainlike.py  brainlikef.py  dd.py  fluid.py  fluidopti.py  gpnmmt.py  massivemultitraining.py  multitrain.py  newmultitrain.py  nmmt.py  rats.py  tictactoe.py
.jj/working_copy/: checkout  tree_state
complex_fluid_learner/: Cargo.toml
complex_fluid_learner/src/: gpu_context.rs  main.rs  micro_circuit.rs  neural_network.rs  shaders.rs  utils.rs
mm/: Cargo.toml  Exploring_a_Single_Cortical_Neuron.ipynb  README.md  deep7_weights.json  synapse_cnn_model_1.h5  synapse_cnn_model_2.h5  synapse_cnn_model_3.h5  synapse_cnn_model_4.h5  synapse_cnn_model_5.h5  synapse_cnn_model_6.h5
mm/scripts/: parse_pickles.py  spike_approximation.py  synapses.py
mm/src/: main.rs
mm/src/gpu/: context.rs  kernels.rs  mod.rs
mm/src/ops/: activation.rs  kwta.rs  loss.rs  mod.rs
