[package]
name = "complex_fluid_learner"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
ndarray = "0.15"
rand = "0.8"
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
plotters = "0.3"
rayon = "1.8"
indicatif = "0.17.11"

[features]
default = []
